--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="container-fluid " id="form">
             <div class="mb-3 p-2">
                 <label for="exampleInputEmail1" class="form-label">Enter your name</label>
-                <input type="text" class="form-control w-25" id="namevalue">
+                <input type="text" class="form-control w-25" onfocus="this.value=''" id="namevalue">
               </div>
         <div class="mb-3 p-2">
           <label for="exampleInputEmail1" class="form-label">Enter your email addres</label>
-          <input type="text" class="form-control w-25" id="textvalue">
+          <input type="text" class="form-control w-25" onfocus="this.value=''"id="textvalue">
         </div>
         <div class="p-2">
         <button type="submit" class="btn btn-primary p-2" onclick="myfunction()">Submit</button>
